examples/test/testpolicy12926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12926
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key42: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value46
          key17: value11
          key49: value1
      podSelector:
        matchLabels:
          key37: value49
          key38: value20
